--- a/Brudnopis.ipynb
+++ b/Brudnopis.ipynb
@@ -12,7 +12,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "\n",
-    "from models.bert_classifier_module import BertClassifier\n",
+    "from models.bert_classifier_module import BertHateClassifier\n",
     "from transformers import BertTokenizer, BertForSequenceClassification\n",
     "import utils.pytorch as pytorch_utils"
    ]
@@ -147,7 +147,7 @@
     }
    ],
    "source": [
-    "model = BertClassifier()"
+    "model = BertHateClassifier()"
    ]
   },
   {
