--- a/Brudnopis.ipynb
+++ b/Brudnopis.ipynb
@@ -76,7 +76,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Dataset(torch.utils.data.Dataset):\n",
+    "class HateSpeechDataset(torch.utils.data.HateSpeechDataset):\n",
     "    \n",
     "    def __init__(self):\n",
     "        with open(os.path.join(\"datafiles\", \"training_set_clean_only_text.txt\"), encoding=\"utf-8\") as f:\n",
@@ -107,7 +107,7 @@
     "class DataLoader(torch.utils.data.DataLoader):\n",
     "    \n",
     "    def __init__(self):\n",
-    "        dataset = Dataset()\n",
+    "        dataset = HateSpeechDataset()\n",
     "        print(len(dataset))\n",
     "        super(DataLoader, self).__init__(\n",
     "            dataset=dataset,\n",
