fix dataloading bugs

--- a/Brudnopis.ipynb
+++ b/Brudnopis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "98e726a9",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "163c72a5",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "3e7861ad",
    "metadata": {},
    "outputs": [],
@@ -40,28 +40,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "1b287414",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 3]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "15f4bab4",
    "metadata": {},
    "outputs": [],
@@ -71,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "dd4b9a5b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class HateSpeechDataset(torch.utils.data.HateSpeechDataset):\n",
+    "class Dataset(torch.utils.data.Dataset):\n",
     "    \n",
     "    def __init__(self):\n",
     "        with open(os.path.join(\"datafiles\", \"training_set_clean_only_text.txt\"), encoding=\"utf-8\") as f:\n",
@@ -99,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "c288cf1a",
    "metadata": {},
    "outputs": [],
@@ -107,7 +96,7 @@
     "class DataLoader(torch.utils.data.DataLoader):\n",
     "    \n",
     "    def __init__(self):\n",
-    "        dataset = HateSpeechDataset()\n",
+    "        dataset = Dataset()\n",
     "        print(len(dataset))\n",
     "        super(DataLoader, self).__init__(\n",
     "            dataset=dataset,\n",
@@ -121,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "9d416b4a",
    "metadata": {},
    "outputs": [],
@@ -156,45 +145,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "085aa05a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10041\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataloader = DataLoader()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
+   "id": "c0207dae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from utils.helpers import read_text_file, broadcast_list_to_type\n",
+    "\n",
+    "\n",
+    "all_texts = read_text_file(os.path.join(\"datafiles\", \"training_set_clean_only_text.txt\"))\n",
+    "all_labels = read_text_file(os.path.join(\"datafiles\", \"training_set_clean_only_tags.txt\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "58fe2220",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "train_texts = []\n",
+    "train_labels = []\n",
+    "\n",
+    "valid_texts = []\n",
+    "valid_labels = []\n",
+    "\n",
+    "\n",
+    "for text, label in zip(all_texts, all_labels):\n",
+    "    r = np.random.uniform()\n",
+    "    if r > .8:\n",
+    "        valid_texts.append(text)\n",
+    "        valid_labels.append(label)\n",
+    "    else:\n",
+    "        train_texts.append(text)\n",
+    "        train_labels.append(label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "a2f78c7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(\"datafiles\", \"valid_texts.txt\"), \"w\", encoding=\"utf-8\") as f:\n",
+    "    for text in valid_texts:\n",
+    "        f.write(text + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "46e8da1a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of the model checkpoint at dkleczek/bert-base-polish-cased-v1 were not used when initializing BertModel: ['cls.seq_relationship.bias', 'cls.predictions.transform.LayerNorm.weight', 'cls.predictions.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.bias', 'cls.predictions.transform.dense.bias', 'cls.predictions.decoder.weight', 'cls.predictions.decoder.bias']\n",
-      "- This IS expected if you are initializing BertModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
-      "- This IS NOT expected if you are initializing BertModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = BertHateClassifier()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "30022f45",
    "metadata": {},
    "outputs": [],
@@ -217,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "dbaa13ef",
    "metadata": {},
    "outputs": [],
