metric test train

--- a/deployment/test_deployment.ipynb
+++ b/deployment/test_deployment.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "0831eab7",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "582ece6d",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "2251c490",
    "metadata": {},
    "outputs": [],
@@ -39,12 +39,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "3a6a8b1f",
    "metadata": {},
    "outputs": [],
    "source": [
     "SERVICE_URL = \"http://192.168.49.2:30055/hate_speech_detection\" "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "3537fc8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request = {\"text\": \"Spierdalaj chuju\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "40fa294c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'confidence': 0.6859502196311951, 'harmfulness': 'hate-speech'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = requests.get(SERVICE_URL, json=request)\n",
+    "print(r.json())"
    ]
   },
   {
